feat(redis):Implemented redis caching