@@ -6,15 +6,20 @@ import com.bush.pharmacy_web_app.repository.product.ProductRepository;
 import com.bush.pharmacy_web_app.repository.product.dailyfeatured.DailyFeaturedProductsRepository;
 import com.bush.pharmacy_web_app.service.product.mapper.MedicinePreviewReadMapper;
 import lombok.RequiredArgsConstructor;
+import org.springframework.cache.annotation.CacheConfig;
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 @Service
 @RequiredArgsConstructor
 @Transactional(readOnly = true)
+@CacheConfig(cacheNames = "DailyFeaturedProduct")
 public class DailyFeaturedProductService {
     private final DailyFeaturedProductsRepository productsRepository;
     private final ProductRepository productRepository;
@@ -23,6 +28,7 @@ public class DailyFeaturedProductService {
 
     private final MedicinePreviewReadMapper medicinePreviewReadMapper;
 
+    @CacheEvict
     @Transactional
     public void createDailyFeaturedProducts(List<ProductPreviewReadDto> products) {
         if (products == null) {
@@ -44,16 +50,18 @@ public class DailyFeaturedProductService {
         changelogService.createLog();
     }
 
+    @CacheEvict
     @Transactional
     public void deleteAllDailyFeaturedProducts() {
         productsRepository.deleteAll();
     }
 
+    @Cacheable
     public List<ProductPreviewReadDto> findDailyMedicine() {
         return productsRepository.findAll()
                 .stream()
                 .map(DailyFeaturedProduct::getProduct)
                 .map(medicinePreviewReadMapper::map)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
